# portfolio-fastapi-duno

./: pyproject.toml
fastapi_zero/: app.py  security.py
migrations/versions/: 705940c249b4_exercicio_02_aula_04.py  cab16a70f040_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_users.py
